contact on mobile screen fixed - min-height of slides changed to 150px

--- a/css/_slide.css
+++ b/css/_slide.css
@@ -4,7 +4,7 @@
     appear 2s linear alternate;
     animation-delay: 1s;
     background-color: var(--background-primary);
-    height: 100px;
+    min-height: 150px;
     opacity: 0;
     position: absolute;
     padding-bottom:1rem;
@@ -51,7 +51,7 @@ span:not(.btn-command), .phone
     }
 
     #slide3  {
-       
+
         height: 180px;
         padding-bottom:2rem;
     }
@@ -88,7 +88,6 @@ span:not(.btn-command), .phone
 
     100% { top: 0; opacity: 1 }
 }
-
 
 @-webkit-keyframes slide {
 
